@@ -140,6 +140,11 @@ class AdminPageChooser(AdminChooser):
     def __init__(self, target_models=None, can_choose_root=False, **kwargs):
         super(AdminPageChooser, self).__init__(**kwargs)
 
+        if target_models:
+            models = ', '.join([model._meta.verbose_name.title() for model in target_models if model is not Page])
+            if models:
+                self.choose_one_text += ' (' + models + ')'
+
         self.target_models = list(target_models or [Page])
         self.can_choose_root = can_choose_root
 
